--- a/src/essets/scss/App.font.scss
+++ b/src/essets/scss/App.font.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap");
+@import "https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap";
 
 @font-face {
   font-family: "Gmarket Sans";
@@ -23,9 +23,6 @@
   font-weight: 700;
   font-style: normal;
 }
-
-$gmarket-sans: "Gmarket Sans";
-$noto-sans: "Noto Sans KR", sans-serif;
 
 html {
   font-family: $noto-sans;
