add Slide, Container style

--- a/src/essets/scss/App.module.scss
+++ b/src/essets/scss/App.module.scss
@@ -19,6 +19,10 @@ a:visited {
   color: $font-color;
 }
 
+ul {
+  list-style: none;
+}
+
 :global(#root) {
   display: flex;
   flex-direction: column;
