--- a/src/essets/scss/Slide.module.scss
+++ b/src/essets/scss/Slide.module.scss
@@ -1,15 +1,18 @@
 .container {
-  aspect-ratio: 1 / 1.3;
+  // aspect-ratio: 1 / 1.3;
+  // width: 390px;
+  border: 1px solid green;
   overflow: hidden;
   position: relative;
 
   .slide {
     width: 100%;
     display: flex;
+    transition: all 0.4s ease-in-out;
 
     img {
       width: 100%;
-      aspect-ratio: 1 / 1.25;
+      // aspect-ratio: 1 / 1.25;
       object-fit: cover;
     }
   }
