--- a/src/essets/scss/Spinner.module.scss
+++ b/src/essets/scss/Spinner.module.scss
@@ -7,11 +7,19 @@
   }
 }
 
-.spinner {
-  border-radius: 50%;
-  border: 4px solid transparent;
-  border-top-color: $font-color;
-  border-bottom-color: $font-color;
-  border-left-color: $font-color;
-  animation: spinner 0.8s ease infinite;
+.container {
+  display: flex;
+  justify-content: center;
+
+  .spinner {
+    border-radius: 50%;
+    border: 4px solid $font-color;
+    border-top-color: transparent;
+    animation: spinner 0.8s ease infinite;
+
+    &.white {
+      border: 4px solid #fff;
+      border-top-color: transparent;
+    }
+  }
 }
