--- a/src/essets/scss/variables.scss
+++ b/src/essets/scss/variables.scss
@@ -3,5 +3,8 @@ $noto-sans: "Noto Sans KR", sans-serif;
 
 $bg-color: #f9f9f9;
 $font-color: #494949;
+$font-color-opacity: rgba(73, 73, 73, 0.35);
+$warning-color: rgb(253 46 46);
+$blue: rgba(35, 35, 255, 0.75);
 
 $box-shadow: 5px 5px 10px 0 rgba(0 0 0 / 5%);
