add home/nav style

--- a/src/essets/scss/PostList.module.scss
+++ b/src/essets/scss/PostList.module.scss
@@ -1,11 +1,7 @@
 .list {
   padding: 0;
 
-  .listItem {
-    border: 1px solid red;
-
-    &:not(:last-child) {
-      margin-bottom: 15px;
-    }
+  > :not(:last-child) {
+    margin-bottom: 20px;
   }
 }
