--- a/src/essets/scss/Slide.module.scss
+++ b/src/essets/scss/Slide.module.scss
@@ -1,7 +1,7 @@
 .container {
   // aspect-ratio: 1 / 1.3;
   // width: 390px;
-  border: 1px solid green;
+  // border: 1px solid green;
   overflow: hidden;
   position: relative;
 
