--- a/src/essets/scss/App.module.scss
+++ b/src/essets/scss/App.module.scss
@@ -16,7 +16,7 @@ a:hover,
 a:active,
 a:visited {
   text-decoration: none;
-  color: $font-color;
+  color: $black;
 }
 
 ul {
@@ -34,6 +34,9 @@ ul {
 }
 .material-symbols-outlined.fill {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 40;
+}
+.material-symbols-rounded {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
 .nav {
