--- a/src/essets/scss/Button.module.scss
+++ b/src/essets/scss/Button.module.scss
@@ -1,7 +1,7 @@
 .btn {
   padding: 15px;
   text-align: center;
-  background-color: $font-color;
+  background-color: $black;
   border-radius: 5px;
   color: #fff;
   outline: none;
