--- a/src/essets/scss/Container.module.scss
+++ b/src/essets/scss/Container.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 840px;
   margin: 0 auto;
-  border: 1px solid blue;
+  // border: 1px solid blue;
 }
 
 @media screen and (max-width: 840px) {
