--- a/src/essets/scss/Nav.module.scss
+++ b/src/essets/scss/Nav.module.scss
@@ -2,4 +2,57 @@
   padding: 15px 0;
   background-color: #fff;
   box-shadow: $box-shadow;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .logo {
+      display: block;
+      height: 30px;
+
+      img {
+        height: 30px;
+      }
+    }
+
+    .menu {
+      display: flex;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+
+      li {
+        span {
+          display: block;
+          font-size: 2.3rem;
+        }
+      }
+
+      .userMenu {
+        position: relative;
+
+        .dropDown {
+          top: 40px;
+          right: 0;
+
+          li {
+            cursor: pointer;
+            font-family: $gmarket-sans;
+            padding: 15px 20px;
+            border-bottom: 1px solid rgba($black, 0.2);
+          }
+
+          > :last-child {
+            border: none;
+          }
+        }
+      }
+
+      > :not(:last-child) {
+        margin-right: 15px;
+      }
+    }
+  }
 }
