--- a/src/essets/scss/Spinner.module.scss
+++ b/src/essets/scss/Spinner.module.scss
@@ -13,7 +13,7 @@
 
   .spinner {
     border-radius: 50%;
-    border: 4px solid $font-color;
+    border: 4px solid $black;
     border-top-color: transparent;
     animation: spinner 0.8s ease infinite;
 
