add post page/comment style

--- a/src/essets/scss/Button.module.scss
+++ b/src/essets/scss/Button.module.scss
@@ -3,6 +3,7 @@
   text-align: center;
   background-color: $black;
   border-radius: 5px;
+  border: none;
   color: #fff;
   outline: none;
   transition: 0.2s ease-in-out;
