--- a/src/essets/scss/Nav.module.scss
+++ b/src/essets/scss/Nav.module.scss
@@ -23,31 +23,9 @@
       margin: 0;
       padding: 0;
 
-      li {
-        span {
-          display: block;
-          font-size: 2.3rem;
-        }
-      }
-
-      .userMenu {
-        position: relative;
-
-        .dropDown {
-          top: 40px;
-          right: 0;
-
-          li {
-            cursor: pointer;
-            font-family: $gmarket-sans;
-            padding: 15px 20px;
-            border-bottom: 1px solid rgba($black, 0.2);
-          }
-
-          > :last-child {
-            border: none;
-          }
-        }
+      li span {
+        display: block;
+        font-size: 2.3rem;
       }
 
       > :not(:last-child) {
