--- a/src/essets/scss/CommentItem.module.scss
+++ b/src/essets/scss/CommentItem.module.scss
@@ -15,7 +15,7 @@
       justify-content: space-between;
       align-items: center;
 
-      .moreBtn {
+      .removeBtn {
         font-size: 18px;
         cursor: pointer;
       }
