--- a/src/essets/scss/CommentForm.module.scss
+++ b/src/essets/scss/CommentForm.module.scss
@@ -6,11 +6,12 @@
   textarea {
     flex-grow: 1;
     height: 100%;
-    padding: 15px;
-    outline: none;
+    padding: 12px 15px;
     border: 1px solid rgba($black, 0.5);
     border-radius: 5px 0 0 5px;
-    font-size: 1.1rem;
+    outline: none;
+    font-family: $noto-sans;
+    font-size: 1rem;
     resize: none;
 
     &::-webkit-scrollbar {
