--- a/src/essets/scss/DropDown.module.scss
+++ b/src/essets/scss/DropDown.module.scss
@@ -5,22 +5,24 @@
     position: absolute;
     top: 10px;
     right: 0;
+    margin: 0;
     padding: 0;
     background-color: #fff;
     box-shadow: $box-shadow;
     border-radius: 5px;
-    border: 1px solid rgba($black, 0.2);
+    border: 1px solid rgba($black, 0.4);
     text-align: center;
     word-break: keep-all;
+    z-index: 10;
 
     li {
       font-family: $gmarket-sans;
       padding: 15px 20px;
-      border-bottom: 1px solid rgba($black, 0.2);
+      border-bottom: 1px solid rgba($black, 0.4);
       cursor: pointer;
 
       &:hover {
-        background-color: $bg-color;
+        background-color: #f4f4f4;
       }
     }
 
