--- a/src/essets/scss/PostHeader.module.scss
+++ b/src/essets/scss/PostHeader.module.scss
@@ -14,11 +14,10 @@
   }
 
   .moreBtn {
-    position: absolute;
-    top: 0;
-    right: 0;
     font-size: 2rem;
     font-weight: 700;
+    flex-grow: 1;
+    text-align: right;
     cursor: pointer;
   }
 }
