--- a/src/essets/scss/Button.module.scss
+++ b/src/essets/scss/Button.module.scss
@@ -8,4 +8,10 @@
   outline: none;
   transition: 0.2s ease-in-out;
   cursor: pointer;
+
+  &.inverse {
+    color: $black;
+    background-color: #fff;
+    border: 1px solid $black;
+  }
 }
