--- a/src/essets/scss/Interactions.module.scss
+++ b/src/essets/scss/Interactions.module.scss
@@ -5,7 +5,8 @@
   }
 
   .liked {
-    font-variation-settings: "fill" 1;
+    font-variation-settings: "FILL" 1;
+    color: $red;
   }
 
   :not(:last-child) {
