--- a/src/essets/scss/AvatarForm.module.scss
+++ b/src/essets/scss/AvatarForm.module.scss
@@ -1,7 +1,9 @@
 .avatarForm {
+  // width: 150px;
+
   .avatar {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
   }
 
   .fileInput {
@@ -16,6 +18,10 @@
   align-items: center;
   border-radius: 10px;
   background-color: #fff;
+
+  canvas {
+    border-radius: 10px;
+  }
 
   .inputContainer {
     width: 100%;
@@ -33,12 +39,14 @@
 
     .submitBtn {
       flex-grow: 8;
+      flex-basis: 0;
       border-radius: 5px 0 0 5px;
     }
 
     .cancleBtn {
-      border-radius: 0 5px 5px 0;
       flex-grow: 2;
+      flex-basis: 0;
+      border-radius: 0 5px 5px 0;
     }
   }
 
