--- a/src/essets/scss/DropDown.module.scss
+++ b/src/essets/scss/DropDown.module.scss
@@ -13,6 +13,7 @@
     border: 1px solid rgba($black, 0.4);
     text-align: center;
     word-break: keep-all;
+    overflow: hidden;
     z-index: 10;
 
     li {
