--- a/src/essets/scss/Nav.module.scss
+++ b/src/essets/scss/Nav.module.scss
@@ -1,6 +1,6 @@
 .nav {
   padding: 15px 0;
-  background-color: #fff;
+  background-color: #454545;
   box-shadow: $box-shadow;
 
   .container {
@@ -26,6 +26,7 @@
       li span {
         display: block;
         font-size: 2.3rem;
+        color: #fff;
       }
 
       > :not(:last-child) {
