--- a/src/essets/scss/CommentList.module.scss
+++ b/src/essets/scss/CommentList.module.scss
@@ -4,9 +4,12 @@
   flex-grow: 1;
   min-height: 220px;
 
-  .loadMore {
-    width: 100%;
-    height: 30px;
+  .observer {
+    display: none;
+
+    &.show {
+      display: block;
+    }
   }
 
   > :not(:last-child) {
