add bookmark component/api

--- a/src/essets/scss/Interactions.module.scss
+++ b/src/essets/scss/Interactions.module.scss
@@ -9,6 +9,10 @@
     color: $red;
   }
 
+  .marked {
+    font-variation-settings: "FILL" 1;
+  }
+
   :not(:last-child) {
     margin-right: 5px;
   }
