--- a/src/essets/scss/UserInfo.module.scss
+++ b/src/essets/scss/UserInfo.module.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: flex-start;
 
+  .avatar {
+    width: 150px;
+    height: 150px;
+  }
+
   .infoContainer {
     flex-grow: 1;
     margin-left: 20px;
