add upload page, detach slide component

--- a/src/essets/scss/Post.module.scss
+++ b/src/essets/scss/Post.module.scss
@@ -11,6 +11,11 @@
     background: black;
     display: flex;
     align-items: center;
+
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
   }
 
   .texts {
