--- a/src/essets/scss/Slider.module.scss
+++ b/src/essets/scss/Slider.module.scss
@@ -7,10 +7,10 @@
     display: flex;
     transition: all 0.4s ease-in-out;
 
-    img {
-      width: 100%;
-      object-fit: cover;
-    }
+    // img {
+    //   width: 100%;
+    //   object-fit: cover;
+    // }
   }
 
   .bulletContainer {
