separate image editor components

--- a/src/essets/scss/Nav.module.scss
+++ b/src/essets/scss/Nav.module.scss
@@ -23,10 +23,14 @@
       margin: 0;
       padding: 0;
 
-      li span {
-        display: block;
-        font-size: 2.3rem;
-        color: #fff;
+      li {
+        cursor: pointer;
+
+        span {
+          display: block;
+          font-size: 2.3rem;
+          color: #fff;
+        }
       }
 
       > :not(:last-child) {
