--- a/src/essets/scss/ImageEditor.module.scss
+++ b/src/essets/scss/ImageEditor.module.scss
@@ -18,37 +18,36 @@
   }
 
   .inputContainer {
-    width: 100%;
-    height: 100%;
-  }
-
-  label {
-    text-align: center;
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-
-  input {
-    display: none;
-  }
-
-  .btns {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-  }
-
-  .previews {
     display: flex;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-size: 1.2rem;
 
-    img {
-      object-fit: cover;
-      width: 100px;
-      height: 100px;
+    input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      opacity: 0;
     }
+  }
+
+  .cropBtn,
+  .previewsBtn {
+    position: absolute;
+    bottom: 22px;
+    box-shadow: $box-shadow;
+  }
+
+  .cropBtn {
+    left: 22px;
+  }
+
+  .previewsBtn {
+    right: 22px;
   }
 }
