--- a/src/essets/scss/Previews.module.scss
+++ b/src/essets/scss/Previews.module.scss
@@ -1,37 +1,71 @@
 .container {
-  width: 35px;
-  height: 35px;
-  background-color: #fff;
-  border: 1px solid rgba($black, 0.3);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   .previewBtn {
+    width: 35px;
+    height: 35px;
+    background-color: $black;
+    border-radius: 50%;
+    box-shadow: $box-shadow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+
+    span {
+      color: #fff;
+    }
   }
 
-  .dropdown {
-    height: 35px;
+  .slide {
+    max-width: 425px;
+    position: absolute;
+    bottom: calc(100% + 20px);
+    right: 0;
+    background-color: $black;
+    border-radius: 10px;
+    border: 1px solid rgba($black, 0.3);
+    box-shadow: $box-shadow;
+    overflow: hidden;
 
     .previewList {
-      top: -110px;
-      right: -22px;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      transition: all 0.3s ease-in-out;
 
       li {
         width: 100px;
         height: 100px;
-        padding: 5px;
+        padding: 10px;
+        flex-shrink: 0;
+        cursor: pointer;
 
         img {
-          opacity: 0.8;
           border-radius: 5px;
           width: 100%;
           height: 100%;
           object-fit: cover;
           pointer-events: none;
         }
+      }
+    }
+
+    .arrow {
+      width: 24px;
+      height: 24px;
+      position: absolute;
+      top: calc(50% - 12px);
+      background-color: #fff;
+      border-radius: 50%;
+      box-shadow: 0 0 10px 3px rgb(0 0 0 / 30%);
+      z-index: 1;
+      cursor: pointer;
+
+      &.left {
+        left: 12px;
+      }
+
+      &.right {
+        right: 12px;
       }
     }
   }
