--- a/src/essets/scss/EditorSlide.module.scss
+++ b/src/essets/scss/EditorSlide.module.scss
@@ -4,7 +4,13 @@
 
   .slide {
     display: flex;
-    transition: all 0.4s ease-in-out;
+
+    .slideItem {
+      flex-shrink: 0;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
   }
 
   .bulletContainer {
@@ -35,7 +41,8 @@
     height: 24px;
     position: absolute;
     top: calc(50% - 12px);
-    background-color: #fff;
+    background-color: $black;
+    color: #fff;
     border-radius: 50%;
     z-index: 1;
     box-shadow: 0 0 10px 3px rgb(0 0 0 / 30%);
