add drag and drop api

--- a/src/essets/scss/ImageEditor.module.scss
+++ b/src/essets/scss/ImageEditor.module.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  width: 100vw;
+  max-width: 80vh;
+  aspect-ratio: 1;
 
   .inputContainer {
     display: flex;
