--- a/src/essets/scss/EditorSlide.module.scss
+++ b/src/essets/scss/EditorSlide.module.scss
@@ -10,6 +10,10 @@
       display: flex;
       justify-content: center;
       width: 100%;
+
+      .editor {
+        transition: all 0.2s ease-in-out;
+      }
     }
   }
 
@@ -45,7 +49,7 @@
     color: #fff;
     border-radius: 50%;
     z-index: 1;
-    box-shadow: 0 0 10px 3px rgb(0 0 0 / 30%);
+    box-shadow: $box-shadow;
     cursor: pointer;
 
     &.left {
