--- a/src/essets/scss/PreviewList.module.scss
+++ b/src/essets/scss/PreviewList.module.scss
@@ -15,41 +15,66 @@
     }
   }
 
-  .slide {
-    max-width: 425px;
+  .slideContainer {
+    padding: 10px;
+    display: flex;
+    align-items: center;
     position: absolute;
     bottom: calc(100% + 20px);
     right: 0;
     background-color: $black;
     border-radius: 10px;
-    border: 1px solid rgba($black, 0.3);
-    box-shadow: $box-shadow;
-    overflow: hidden;
 
-    .previewList {
-      padding: 0;
-      margin: 0;
-      display: flex;
-      transition: all 0.3s ease-in-out;
-    }
+    .slide {
+      position: relative;
+      max-width: 400px;
+      overflow: hidden;
 
-    .arrow {
-      width: 24px;
-      height: 24px;
-      position: absolute;
-      top: calc(50% - 12px);
-      background-color: #fff;
-      border-radius: 50%;
-      box-shadow: 0 0 10px 3px rgb(0 0 0 / 30%);
-      z-index: 1;
-      cursor: pointer;
-
-      &.left {
-        left: 12px;
+      .previewList {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        transition: all 0.3s ease-in-out;
       }
 
-      &.right {
-        right: 12px;
+      .arrow {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        top: calc(50% - 12px);
+        background-color: #fff;
+        border-radius: 50%;
+        box-shadow: $box-shadow;
+        z-index: 1;
+        cursor: pointer;
+
+        &.left {
+          left: 12px;
+        }
+
+        &.right {
+          right: 12px;
+        }
+      }
+    }
+
+    .inputMore {
+      label {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        span {
+          color: #fff;
+          font-size: 45px;
+        }
+      }
+
+      input {
+        display: none;
       }
     }
   }
