--- a/src/essets/scss/ImageEditor.module.scss
+++ b/src/essets/scss/ImageEditor.module.scss
@@ -1,11 +1,11 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 100vw;
-  max-width: 80vh;
-  aspect-ratio: 1;
+  font-size: 1.2rem;
 
   .inputContainer {
     display: flex;
@@ -14,7 +14,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    font-size: 1.2rem;
+    // font-size: 1.2rem;
 
     input {
       position: absolute;
