--- a/src/essets/scss/Spinner.module.scss
+++ b/src/essets/scss/Spinner.module.scss
@@ -8,8 +8,11 @@
 }
 
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .spinner {
     border-radius: 50%;
