--- a/src/essets/scss/GridItem.module.scss
+++ b/src/essets/scss/GridItem.module.scss
@@ -1,4 +1,5 @@
 .gridItem {
+  max-height: 297px;
   position: relative;
   background-color: black;
   cursor: pointer;
@@ -6,16 +7,17 @@
   img {
     width: 100%;
     object-fit: cover;
+    aspect-ratio: 1;
   }
 
   .overlay {
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 0;
+    bottom: 0;
+    right: 0;
     left: 0;
     background-color: rgba($black, 0.5);
     opacity: 0;
