--- a/src/essets/scss/Button.module.scss
+++ b/src/essets/scss/Button.module.scss
@@ -2,8 +2,8 @@
   padding: 15px;
   text-align: center;
   background-color: $black;
+  border: 1px solid $black;
   border-radius: 5px;
-  border: none;
   color: #fff;
   outline: none;
   transition: 0.2s ease-in-out;
