--- a/src/essets/scss/PostItem.module.scss
+++ b/src/essets/scss/PostItem.module.scss
@@ -15,7 +15,7 @@
   }
 
   .body {
-    .contents {
+    .texts {
       display: -webkit-box;
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 3;
