--- a/src/essets/scss/Profile.module.scss
+++ b/src/essets/scss/Profile.module.scss
@@ -31,6 +31,12 @@
     flex-grow: 1;
     padding-left: 30px;
     border-left: 1px solid rgba($black, 0.3);
+
+    .suspense {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+    }
   }
 }
 
