--- a/src/essets/scss/Spinner.module.scss
+++ b/src/essets/scss/Spinner.module.scss
@@ -20,7 +20,7 @@
     border-top-color: transparent;
     animation: spinner 0.8s ease infinite;
 
-    &.white {
+    &.inverse {
       border: 4px solid #fff;
       border-top-color: transparent;
     }
