--- a/src/essets/scss/Profile.module.scss
+++ b/src/essets/scss/Profile.module.scss
@@ -32,10 +32,8 @@
     padding-left: 30px;
     border-left: 1px solid rgba($black, 0.3);
 
-    .suspense {
-      width: 150px;
+    .spinner {
       height: 150px;
-      border-radius: 50%;
     }
   }
 }
