--- a/src/essets/scss/Modal.module.scss
+++ b/src/essets/scss/Modal.module.scss
@@ -9,4 +9,13 @@
   bottom: 0;
   z-index: 9;
   background-color: rgba(0, 0, 0, 0.65);
+
+  .symbol {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #fff;
+    font-size: 45px;
+    cursor: pointer;
+  }
 }
