--- a/src/essets/scss/Container.module.scss
+++ b/src/essets/scss/Container.module.scss
@@ -2,11 +2,10 @@
   width: 100%;
   max-width: 945px;
   margin: 0 auto;
-  // border: 1px solid blue;
 }
 
 @media screen and (max-width: 945px) {
   .container {
-    padding: 0 calc(14px * 5);
+    padding: 0 20px;
   }
 }
