--- a/src/essets/scss/NotFound.module.scss
+++ b/src/essets/scss/NotFound.module.scss
@@ -1,23 +1,33 @@
 .container {
   margin-top: 50px;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
-  .warn {
-    margin-right: 20px;
+  .body {
+    margin-bottom: 30px;
+    display: flex;
+    align-items: flex-start;
 
-    h1 {
-      margin: 0 0 15px;
+    .texts {
+      margin-right: 10px;
+
+      h1 {
+        margin: 0 0 10px;
+      }
+
+      p {
+        font-size: 1.2rem;
+        margin: 0;
+      }
     }
 
-    p {
-      font-size: 1.2rem;
-      margin: 0 0 15px;
+    .symbol {
+      font-size: 80px;
     }
   }
 
-  .symbol {
-    font-size: 100px;
+  .link {
+    width: 150px;
   }
 }
