--- a/src/essets/scss/UserInfo.module.scss
+++ b/src/essets/scss/UserInfo.module.scss
@@ -21,19 +21,12 @@
         font-weight: 700;
       }
 
+      .editBtn {
+        cursor: pointer;
+      }
+
       .followBtn {
         padding: 5px 10px;
-        position: relative;
-        overflow: hidden;
-
-        .spinner {
-          background-color: #fff;
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-        }
       }
     }
 
