add account page, profile edit api

--- a/src/essets/scss/UserInfo.module.scss
+++ b/src/essets/scss/UserInfo.module.scss
@@ -22,6 +22,9 @@
       }
 
       .editBtn {
+        padding: 5px 10px;
+        border: 1px solid $black;
+        border-radius: 5px;
         cursor: pointer;
       }
 
