--- a/src/essets/scss/Post.module.scss
+++ b/src/essets/scss/Post.module.scss
@@ -1,6 +1,6 @@
 .container {
   max-height: 90%;
-  margin: 0 30px;
+  margin: 0 20px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: $box-shadow;
@@ -12,6 +12,12 @@
     display: flex;
     align-items: center;
 
+    @media screen and (max-width: 768px) {
+      & {
+        display: none;
+      }
+    }
+
     img {
       width: 100%;
       object-fit: cover;
@@ -21,7 +27,7 @@
   .textContainer {
     display: flex;
     flex-direction: column;
-    min-width: 450px;
+    width: 100vw;
     max-width: 450px;
 
     .body {
