--- a/src/essets/scss/Profile.module.scss
+++ b/src/essets/scss/Profile.module.scss
@@ -2,38 +2,62 @@
   display: flex;
   align-items: flex-start;
   margin-top: 40px;
-  padding: 30px 0;
   background-color: #fff;
   border-radius: 10px;
   border: 1px solid rgba($black, 0.2);
   box-shadow: $box-shadow;
 
   .nav {
+    word-break: keep-all;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 30px 0;
 
     li {
       padding: 0 60px;
       font-size: 1.2rem;
+      margin: 0 0 20px;
 
       .active {
         text-decoration: underline;
       }
     }
-
-    > :not(:last-child) {
-      margin-bottom: 20px;
-    }
   }
 
   .userInfo {
     flex-grow: 1;
-    padding-left: 30px;
+    padding: 0 30px;
+    margin: 30px 0;
     border-left: 1px solid rgba($black, 0.3);
 
     .spinner {
       height: 150px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    & {
+      flex-direction: column-reverse;
+
+      .nav {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 15px 0;
+
+        li {
+          margin: 0;
+          font-size: 1.1rem;
+        }
+      }
+
+      .userInfo {
+        width: 100%;
+        padding: 30px;
+        margin: 0;
+        border-left: none;
+        border-bottom: 1px solid rgba($black, 0.3);
+      }
     }
   }
 }
