--- a/src/essets/scss/Button.module.scss
+++ b/src/essets/scss/Button.module.scss
@@ -4,6 +4,7 @@
   background-color: $black;
   border: 1px solid $black;
   border-radius: 5px;
+  font-size: 1rem;
   color: #fff;
   outline: none;
   transition: 0.2s ease-in-out;
