--- a/src/essets/scss/SignIn.module.scss
+++ b/src/essets/scss/SignIn.module.scss
@@ -18,6 +18,12 @@
     text-align: center;
   }
 
+  .test {
+    text-align: center;
+    opacity: 0.6;
+    margin: 0 !important;
+  }
+
   .find {
     padding: 0 20px;
     text-align: right;
