--- a/src/essets/scss/UserInfo.module.scss
+++ b/src/essets/scss/UserInfo.module.scss
@@ -5,11 +5,18 @@
   .avatar {
     width: 150px;
     height: 150px;
+
+    @media screen and (max-width: 768px) {
+      & {
+        width: 100px;
+        height: 100px;
+      }
+    }
   }
 
   .infoContainer {
     flex-grow: 1;
-    margin-left: 20px;
+    margin: 0 0 0 20px;
 
     .header {
       display: flex;
@@ -48,13 +55,25 @@
 
     .desc {
       margin: 0;
-      // max-width: 80%;
-      // max-height: 74px;
-      // overflow: auto;
     }
 
     > :not(:last-child) {
       margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    & {
+      flex-direction: column;
+      align-items: center;
+
+      .infoContainer {
+        margin: 15px 0 0;
+
+        .header .name {
+          font-size: 1.3rem;
+        }
+      }
     }
   }
 }
