--- a/src/essets/scss/variables.scss
+++ b/src/essets/scss/variables.scss
@@ -3,7 +3,7 @@ $noto-sans: "Noto Sans KR", sans-serif;
 
 $bg-color: #f9f9f9;
 $black: #494949;
-$red: rgb(253 46 46);
+$red: #f8654a;
 $blue: rgba(35, 35, 255, 0.75);
 
 $box-shadow: 5px 5px 10px 0 rgba(0 0 0 / 5%);
