--- a/src/essets/scss/Home.module.scss
+++ b/src/essets/scss/Home.module.scss
@@ -1,3 +1,25 @@
 .container {
-  max-width: 476px;
+  max-width: 800px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+
+  .postList {
+    max-width: 476px;
+    margin: 0 20px 0 0;
+  }
+
+  .search {
+    width: 100%;
+    max-width: 476px;
+  }
+
+  @media screen and (max-width: 945px) {
+    flex-direction: column-reverse;
+    align-items: center;
+
+    .postList {
+      margin: 20px 0 0;
+    }
+  }
 }
