--- a/src/essets/scss/SignUpForm.module.scss
+++ b/src/essets/scss/SignUpForm.module.scss
@@ -7,8 +7,8 @@
     label {
       padding: 0 5px;
       position: absolute;
-      top: calc(50% - 15px - 0.5rem);
-      left: 10px;
+      top: 21px;
+      left: 15px;
       transition: 0.2s ease-in-out;
       background-color: #fff;
       font-size: 1.1rem;
@@ -47,7 +47,7 @@
     &.focused {
       label {
         color: $blue;
-        top: calc(0% - 0.8rem);
+        top: -0.5rem;
         transform: scale(0.9);
       }
       input {
