change search components

--- a/src/essets/scss/Home.module.scss
+++ b/src/essets/scss/Home.module.scss
@@ -1,8 +1,7 @@
 .container {
   max-width: 476px;
 
-  .searchBar {
-    width: 100%;
-    margin: 20px 0;
+  .postList {
+    margin-top: 30px;
   }
 }
