--- a/src/essets/scss/SearchBar.module.scss
+++ b/src/essets/scss/SearchBar.module.scss
@@ -1,75 +1,19 @@
-.container {
-  position: relative;
+.searchBar {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 5px 15px;
 
-  .searchBar {
-    display: flex;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: $box-shadow;
-    border: 1px solid rgba($black, 0.2);
-    padding: 10px 20px;
-
-    input {
-      height: 24px;
-      flex-grow: 1;
-      border: none;
-      outline: none;
-    }
-
-    .symbol {
-      height: 24px;
-      cursor: pointer;
-    }
+  input {
+    flex-grow: 1;
+    border: none;
+    outline: none;
   }
 
-  .listContainer {
-    width: 100%;
-    max-width: 350px;
-    position: absolute;
-    top: calc(100% + 10px);
-    left: calc(50% - 175px);
-    background-color: #fff;
-    border: 1px solid rgba($black, 0.2);
-    border-radius: 5px;
-    box-shadow: $box-shadow;
-    z-index: 2;
-
-    .historyHeader {
-      display: flex;
-      justify-content: space-between;
-      padding: 15px 15px 0;
-
-      > :nth-child(1) {
-        font-size: 1.2rem;
-        font-weight: 600;
-      }
-
-      > :nth-child(2) {
-        opacity: 0.8;
-        cursor: pointer;
-      }
-    }
-
-    .observer {
-      display: none;
-
-      &.show {
-        display: block;
-      }
-    }
-
-    &::after {
-      content: "";
-      width: 12px;
-      height: 12px;
-      display: block;
-      position: absolute;
-      top: -7px;
-      left: 50%;
-      background-color: #fff;
-      transform: rotate(45deg);
-      border-top: 1px solid rgba($black, 0.2);
-      border-left: 1px solid rgba($black, 0.2);
-    }
+  .symbol {
+    cursor: pointer;
   }
 }
