--- a/src/essets/scss/SearchList.module.scss
+++ b/src/essets/scss/SearchList.module.scss
@@ -1,38 +1,67 @@
-.list {
+.container {
   width: 100%;
-  height: 300px;
-  padding-top: 10px;
+  height: 100%;
   overflow: auto;
 
-  .listItem {
-    padding: 5px 10px;
+  .historyHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 15px 0;
 
-    &:hover {
-      background-color: $bg-color;
+    > :nth-child(1) {
+      font-size: 1.2rem;
+      font-weight: 600;
     }
 
-    a {
-      display: flex;
-      align-items: center;
-
-      .texts {
-        margin-left: 10px;
-
-        .desc {
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 1;
-          overflow: hidden;
-        }
-      }
+    > :nth-child(2) {
+      opacity: 0.8;
+      cursor: pointer;
     }
   }
 
-  .empty {
+  .list {
+    width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0.8;
+    padding-top: 10px;
+
+    .listItem {
+      padding: 5px 10px;
+
+      &:hover {
+        background-color: $bg-color;
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+
+        .texts {
+          margin-left: 10px;
+
+          .desc {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
+            overflow: hidden;
+          }
+        }
+      }
+    }
+
+    .empty {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0.8;
+    }
+  }
+
+  .observer {
+    display: none;
+
+    &.show {
+      display: block;
+    }
   }
 }
