--- a/src/essets/scss/App.module.scss
+++ b/src/essets/scss/App.module.scss
@@ -34,5 +34,18 @@ ul {
 }
 
 .body {
+  padding-top: 60px;
   flex-grow: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .footer {
+    display: none;
+  }
 }
