--- a/src/essets/scss/SearchBar.module.scss
+++ b/src/essets/scss/SearchBar.module.scss
@@ -1,13 +1,13 @@
-.searchBar {
-  width: 100%;
-  height: 30px;
+.container {
   display: flex;
   align-items: center;
   background-color: #fff;
   border-radius: 4px;
-  padding: 5px 15px;
+  overflow: hidden;
+  padding: 0 10px;
 
   input {
+    height: 30px;
     flex-grow: 1;
     border: none;
     outline: none;
