--- a/src/essets/scss/SearchList.module.scss
+++ b/src/essets/scss/SearchList.module.scss
@@ -1,15 +1,14 @@
 .container {
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
 
   .historyHeader {
     display: flex;
     justify-content: space-between;
-    padding: 15px 15px 0;
+    padding: 10px;
 
     > :nth-child(1) {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 600;
     }
 
@@ -20,9 +19,8 @@
   }
 
   .list {
-    width: 100%;
-    height: 100%;
-    padding-top: 10px;
+    flex-grow: 1;
+    overflow: auto;
 
     .listItem {
       padding: 5px 10px;
@@ -49,10 +47,8 @@
     }
 
     .empty {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
+      margin-top: 20px;
       opacity: 0.8;
     }
   }
