--- a/src/essets/scss/UserMenu.module.scss
+++ b/src/essets/scss/UserMenu.module.scss
@@ -1,37 +1,30 @@
-.container {
-  position: relative;
+.header {
+  padding: 20px;
+  border-bottom: 1px solid rgba($black, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-  .userMenu {
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    top: calc(100% + 10px);
-    right: 0;
-    background-color: #fff;
-    border-radius: 10px;
-    border: 1px solid rgba($black, 0.3);
+  .name {
+    font-size: 1.1rem;
+    font-weight: 600;
+  }
+
+  .profileBtn {
+    padding: 5px 10px;
+    background-color: $black;
+    border-radius: 20px;
+    color: #fff;
     box-shadow: $box-shadow;
-    overflow: hidden;
-    z-index: 1;
+    cursor: pointer;
+  }
+}
 
-    li {
-      font-family: $gmarket-sans;
-      word-break: keep-all;
-      text-align: center;
-      cursor: pointer;
-
-      > * {
-        display: block;
-        padding: 15px 20px;
-      }
-
-      &:hover {
-        background-color: #f4f4f4;
-      }
-    }
-
-    > :not(:last-child) {
-      border-bottom: 1px solid rgba($black, 0.3);
-    }
+.menu {
+  li {
+    padding: 20px;
+    border-bottom: 1px solid rgba($black, 0.3);
+    cursor: pointer;
   }
 }
